--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,7 +1,3 @@
 parameters:
-#    cethyworks_analytics.example.class: Cethyworks\AnalyticsBundle\Example
-
-services:
-#    cethyworks_analytics.example:
-#        class: %cethyworks_analytics.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    cethyworks.analytics_tracker.class: Cethyworks\AnalyticsBundle\Listener\AnalyticsTrackerListener
+    cethyworks.analytics_tracker.template: CethyworksAnalyticsBundle:Tracker:analytics.html.twig
