--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -8,3 +8,12 @@ services:
         class: Cethyworks\AnalyticsBundle\Listener\Listener
         tags:
             - { name: kernel.event_listener, event: start.exercise, method: onExerciseStart }
+            - { name: kernel.event_listener, event: ask.result, method: onAskResult }
+            - { name: kernel.event_listener, event: security.interactive_login, method: onUserConnect }
+            - { name: kernel.event_listener, event: exercise.ask_tip, method: onExerciseAskTip }
+        arguments: ["@initialize.listener.identify"]
+            
+
+    initialize.listener.identify:
+        class: Cethyworks\AnalyticsBundle\AnalyticsHandler\AnalyticsHandler        
+        
